Atualização de compatibilidade com Java 8 e 32 bits